<resources>
    <string name="app_name">Mini Bakkal</string>
    <string name="please_wait">Lütfen Bekleyin</string>
    <string name="not_found_item">Görüntülenecek Öğe\n Bulunamadı</string>
    <string name="close">Kapat</string>
    <string name="delete">Sil</string>
    <string name="add">+</string>
    <string name="simple_price">5.45 ₺</string>
    <string name="remove">-</string>
    <string name="five">5</string>
    <string name="sum">Toplam:</string>
    <string name="simple_sum">₺15,00</string>
    <string name="confirm_basket">Sepeti Onayla</string>
    <string name="Warning">Uyarı</string>
    <string name="drop_basket">Sepeti boşaltmak istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="tl">₺</string>
    <string name="success">İşlem Başarılı</string>
    <string name="ok">Tamam</string>
</resources>