<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/close_button"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="0.076"
        tools:text="@string/simple_price" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="@string/app_name" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addCardView"
        android:layout_width="@dimen/product_item_btn_size"
        android:layout_height="@dimen/product_item_btn_size"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/priceText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="0.5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/countCardView"
        android:layout_width="@dimen/product_item_btn_size"
        android:layout_height="@dimen/product_item_btn_size"
        app:cardBackgroundColor="@color/product_count_bg"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/addCardView"
        app:layout_constraintEnd_toStartOf="@+id/addCardView"
        app:layout_constraintTop_toTopOf="@+id/addCardView"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="0.5dp">

        <TextView
            android:id="@+id/countText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/five" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/removeCardView"
        android:layout_width="@dimen/product_item_btn_size"
        android:layout_height="@dimen/product_item_btn_size"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/countCardView"
        app:layout_constraintEnd_toStartOf="@+id/countCardView"
        app:layout_constraintTop_toTopOf="@+id/countCardView"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="0.5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remove" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>