<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/addCardView"
                android:layout_width="@dimen/product_item_btn_size"
                android:layout_height="@dimen/product_item_btn_size"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="0.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/countCardView"
                android:layout_width="@dimen/product_item_btn_size"
                android:layout_height="@dimen/product_item_btn_size"
                app:cardBackgroundColor="@color/product_count_bg"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/addCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="0.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/countText"
                    android:text="@string/five" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/removeCardView"
                android:layout_width="@dimen/product_item_btn_size"
                android:layout_height="@dimen/product_item_btn_size"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toStartOf="@+id/countCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="0.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/remove" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_price"
        android:layout_marginLeft="@dimen/product_item_price_margin_left"
        android:layout_marginTop="@dimen/product_item_margin_top"
        android:textColor="@color/close_button"
        android:textStyle="bold"
        android:textSize="@dimen/product_item_price_text"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        android:layout_marginStart="@dimen/product_item_price_margin_left" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="@dimen/product_item_name_margin"
        app:layout_constraintStart_toStartOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/priceText" />

</androidx.constraintlayout.widget.ConstraintLayout>