<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/tab_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleText"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/app_bar_title"
                android:layout_centerInParent="true"
                tools:text="@string/app_name"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shoppingIcon"
                android:src="@drawable/ic_shopping_cart"
                android:layout_marginRight="@dimen/app_bar_item_margin"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/app_bar_item_margin"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closeBtn"
                android:text="@string/close"
                android:textColor="@color/close_button"
                android:textStyle="bold"
                android:textSize="@dimen/app_bar_button_size"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                tools:ignore="RelativeOverlap"
                android:layout_marginRight="@dimen/app_bar_item_margin"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/app_bar_item_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteBtn"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:textSize="@dimen/app_bar_button_size"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/app_bar_item_margin"
                android:layout_marginStart="@dimen/app_bar_item_margin"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/badge_card_size"
                android:layout_height="@dimen/badge_card_size"
                app:cardCornerRadius="@dimen/badge_card_radius"
                android:id="@+id/badgeCard"
                app:cardElevation="13dp"
                android:layout_marginTop="@dimen/badge_margin_top"
                android:layout_marginRight="@dimen/badge_margin_right"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/badge_margin_right">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/badgeTxt"
                    android:textStyle="bold"
                    android:textSize="@dimen/badge_text_size"
                    android:textColor="@android:color/black"
                    android:gravity="center_horizontal"
                    tools:text="6"
                    tools:ignore="SmallSp" />
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>